Fixed header scale, element size, alignment

--- a/static/style/stylesheet.css
+++ b/static/style/stylesheet.css
@@ -8,77 +8,83 @@ body{
 }
 
 /* =======Header======= */
-#wrapper{
-    max-width: 1200px;
-    width: 100%;
-    margin: 0 auto;
-    top: 0;
-}
 
-#navigation-bar{
+/*
+#wrapper{
+    wrapper vispar vajag? div pa default der, manuprat ir ok bez 
+}
+*/
+
+#navigation-bar {
     display: flex;
-    flex-wrap: wrap;
-    height: 60px;
-    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.25);
+    position: relative;
+    height: 58px;
+    box-shadow: 0px 2px 10px rgb(0 0 0 / 20%);
     border-bottom-left-radius: 3px;
     border-bottom-right-radius: 3px;
     justify-content: space-between;
+    align-items: center;
 }
 
-#navigation-bar-logo{
-    width: 170px;
-    height: 40px;
-    margin: 1% 0 0 2%;
+#navigation-bar-logo {
+    width: auto;
+    height: 50%;
     user-select: none;
+    padding-left: 15px;
 }
 
-#navigation-bar-right-side{
+#navigation-bar-right-side {
     display: flex;
-    margin: 1.5% 4% 0 2%;
     justify-content: center;
+    align-items: center;
+    padding-right: 22px;
+    width: fit-content;
 }
-#search-bar{
+
+#search-bar {
     display: flex;
     align-items: center;
-    margin-right: 25px;
-    width: 200px;
-    height: 25px;
-    border-radius: 10px;
-    border: none;
-    outline: none;
-    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.25);
+    margin-right: 24px;
+    width: 210px;
+    height: 45%;
+    border-radius: 10vmax;
     padding-left: 10px;
+    box-shadow: 0px 2px 6px rgb(0 0 0 / 15%);
+    justify-content: flex-start;
 }
 
-#search-bar-input{
+#search-bar-input {
     border: none;
     outline: none;
-    width: 150px;
+    width: 177px;
+    height: auto;
+    color: #9c9c9c;
 }
 
-#search-bar-search-icon{
-    margin-left: 20px;
-    vertical-align: middle;
-    width: 20px;
+#search-bar-search-icon {
+    margin-left: 5px;
+    padding-top: 2px;
+    align-items: center;
+    width: 23px;
 }
 
-#login-button{
-    width: 60px;
-    height: 25px;
-    line-height: 25px;
+#login-button {
+    width: 65px;
+    height: 45%;
+    line-height: 27px;
     text-align: center;
-    vertical-align: center;
-    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.25);
-    border-radius: 10px;
+    border-radius: 10vmax;
+    box-shadow: 0px 2px 6px rgb(0 0 0 / 15%);
     font-size: 13px;
-    color: #c8c8c8;
+    color: #9c9c9c;
 }
 
-#banner{
-    background-image: url("../images/Banner_adobespark.png");
+#banner {
+    background-image: url(../images/Banner_adobespark.png);
+    background-position-x: center;
+    background-size: cover;
     height: 500px;
     width: 100%;
-    margin-top: 0.1%;
 }
 
 #banner-logo{
